# xmdb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GEMINI.md  LICENSE  MEDIA.org  README.md  TODO.md
.github/workflows/: cmake-linux.yml  docs.yml  gui-unit-tests.yml  release.yml  wasm-parser.yml
demos/: general.mkv
docs/doctrees/: building.doctree  developing.doctree  environment.pickle  index.doctree  library_reference.doctree  sql_syntax.doctree
docs/doctrees/ext/breathe-5.0.0a2/: CHANGELOG.doctree  CONTRIBUTING.doctree  CONTRIBUTORS.doctree  README.doctree
docs/html/: .buildinfo  annotated.html  annotated_dup.js  building.html  classes.html  developing.html  dir_26f22f7844591c06056cc92000f06a38.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_76f33dfa075948d3e6e1d59c4eed8787.html  dir_76f33dfa075948d3e6e1d59c4eed8787.js  dir_8513aca7bad5587e3fa4f5252126623b.html  dir_99aeae84ddc9f3d7de75ef8c2dd4f52c.html  dir_a2f0e5642e47e7ed59fe0f0829eafb5f.html  dir_a2f0e5642e47e7ed59fe0f0829eafb5f.js  dir_f61567e19da64bd4ba15663315f2fa67.html  dir_f61567e19da64bd4ba15663315f2fa67.js  dir_f6675a7e1cd1d6d7f6e5e9669ead62e8.html  dir_f6675a7e1cd1d6d7f6e5e9669ead62e8.js  doxygen_crawl.html  files.html  genindex.html  hierarchy.html  hierarchy.js  index.html  library_reference.html  menudata.js  navtreedata.js  navtreeindex0.js  objects.inv  search.html  searchindex.js  sql_syntax.html  topics.html  topics.js
docs/html/_sources/: index.rst.txt  library_reference.rst.txt
docs/html/d0/d13/: structList.html  structxmdb_1_1PngHeader.html
docs/html/d0/d18/: ir_8hpp_source.html  structxmdb_1_1SQL_1_1TypingContext.html
docs/html/d0/d2c/: structxmdb_1_1DBStateHeader-members.html
docs/html/d0/d34/: classxmdb_1_1QueryGraph_1_1DeleteTableNode-members.html
docs/html/d0/d4c/: structxmdb_1_1DBConnection-members.html
docs/html/d0/d53/: structok_1_1StringBase.html
docs/html/d0/d5a/: structok_1_1ArrayBase.html
docs/html/d0/d5b/: structxmdb_1_1DiskImageChunk-members.html
docs/html/d0/d64/: structok_1_1Table-members.html
docs/html/d0/d6b/: structxmdb_1_1SQL_1_1Expr-members.html
docs/html/d0/d6f/: classxmdb_1_1QueryGraph_1_1ReadNode-members.html  structxmdb_1_1SQL_1_1DBSchema.html
docs/html/d0/d78/: structok_1_1ArenaAllocator_1_1Region.html
docs/html/d0/d7d/: structxmdb_1_1SQL_1_1IrContext-members.html
docs/html/d0/d81/: structok_1_1File_1_1RemoveError.html
docs/html/d0/d8b/: structxmdb_1_1SQL_1_1Parser.html
docs/html/d0/d97/: SDFile_8hpp_source.html
docs/html/d0/d9b/: classxmdb_1_1QueryGraph_1_1InsertNode-members.html
docs/html/d0/dac/: structok_1_1String-members.html
docs/html/d0/db0/: structxmdb_1_1Seq.html
docs/html/d0/db1/: structxmdb_1_1ImageChunk-members.html
docs/html/d0/dc2/: structxmdb_1_1ImageColumnStateHeader-members.html
docs/html/d0/dcc/: QueryGraph_8hpp_source.html
docs/html/d0/dfc/: structSlice-members.html
docs/html/search/: all_0.js  all_1.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_a.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_2.js  classes_4.js  classes_7.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  searchdata.js
gui/: package-lock.json  package.json  sql
gui/src/: App.tsx  main.tsx
gui/src/components/: BottomPanel.tsx  ConnectionDialog.tsx  ConnectionEdit.tsx  GalleryView.tsx  HomePage.tsx  LoadingButton.tsx  LoadingSpinner.tsx  ObjectView.tsx  ObjectsOverview.tsx  QueryEditor.tsx  QueryResponse.tsx  Sidebar.tsx  TabBar.tsx  Toolbar.tsx  ToolbarButton.tsx  Topbar.tsx
gui/src/data/: connection-data.tsx  global-states.ts  objects.ts  query-responce.ts  query-response.ts  util.test.ts  util.ts
gui/src/layouts/: MainLayout.tsx
gui/src/sql/: module.wasm  sql.ts
gui/src/styles/: bars-style.css  forms-style.css  index.css  loading-spinner.css
scripts/: generate_docs.sh  generate_tags.sh  test
sphinx/source/: building.rst  conf.py  developing.rst  gui.rst  index.rst  server.rst  sql.rst  sql_syntax.rst
src/: SQLLexer.cpp  SQLLexer.hpp  SQLParser.cpp  SQLParser.hpp  SourceLocation.hpp  ast.hpp  constructor_linux.cpp  main.cpp  ok.cpp  ok.hpp
src/ArgParser/: ArgParser.cpp  ArgParser.hpp  CMakeLists.txt
src/CLI/: CMakeLists.txt  main.cpp
src/Core/: BTree.cpp  BTree.hpp  BTreeIndex.cpp  BTreeIndex.hpp  BufferedStream.cpp  BufferedStream.hpp  CMakeLists.txt  ColumnLayout.hpp  Core.cpp  Core.hpp  DBConnection.cpp  DBConnection.hpp  DBDescriptor.cpp  DBDescriptor.hpp  DBIndex.hpp  DBPool.cpp  DBPool.hpp  DBRecord.cpp  DBRecord.hpp  DBState.cpp  DBState.hpp  DBTable.cpp  DBTable.hpp  DBUser.cpp  DBUser.hpp  DBValue.cpp  DBValue.hpp  FixedString.cpp  FixedString.hpp  Logger.cpp  Logger.hpp  OrderedMap.hpp  PageList.hpp  PagedSeekList.hpp  Png.hpp  QueryExecutionContext.cpp  QueryExecutionContext.hpp  QueryGraph.cpp  QueryGraph.hpp  RBTree.hpp  (+30 more)
src/IR/: CMakeLists.txt  main.cpp
src/Plugin/: CMakeLists.txt  NativeLibrary.cpp  NativeLibrary.hpp  Plugin.cpp  Plugin.hpp  PluginManager.cpp  PluginManager.hpp  util.hpp
src/Plugins/: CMakeLists.txt  media.c  media.cpp
src/SQL/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  SQL.cpp  SQL.hpp  ast.cpp  ast.hpp  constructor_linux.cpp  global_state.hpp  ir.cpp  ir.hpp  sema.cpp  sema.hpp  type_check.cpp  type_check.hpp  type_check2.cpp  type_check2.hpp  util.hpp
src/Server/: CMakeLists.txt  Config.cpp  Config.hpp  connection.cpp  connection.hpp  http.cpp  http.hpp  main.cpp  obj.cpp  obj.hpp
src/WASMParser/: CMakeLists.txt  build.sh  wasm_module.cpp
tests/: BTree-test.cpp  BTreeIndex-test.cpp  CorePersistence-integration-test.cpp  DBConnection-test.cpp  Plugin-integration-test.cpp  QueryGraph-test.cpp  SHA256-test.cpp  SQL-ir-test.cpp  SQL-type-checking-test.cpp  SQLLexer-test.cpp  SQLParser-test.cpp  SQLsema-test.cpp  snap.py  test.hpp
tests/integration/: helpers.py  scenarios.py  test_cli.py  test_http.py
tests/snaps/: SQLIR-snap.json  SQLIR.cpp
(+365 files in other folders)
